syntax = "proto3";

option csharp_namespace = "multiplixe.usuarios.grpc.protos";

package multiplixe.usuarios.grpc.protos;

message EntryString {
	string value = 1;
	int32 Status = 2;
	int32 Code = 3;
}